# the-api

./: Cargo.toml  Dockerfile  db.sh
data/: sample.json
src/: main.rs  routing.rs  service.rs
src/api/: mod.rs
