[package]
name = "api"
version = "0.1.0"
authors = ["Joshua Grierson <jgrierson101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["v4"] }
rusoto_core = "0.45.0"
rusoto_dynamodb = "0.45.0"
tokio = "0.2"
